--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "David Négrier",
+            "name": "David NÃ©grier",
             "email": "d.negrier@thecodingmachine.com",
             "homepage": "http://mouf-php.com"
         }
