--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         }
     ],
     "require": {
-    	"php": ">=5.3.0"
+    	"php": ">=5.3.0",
+        "mouf/utils.session.session-manager" : ">=2.0-dev,<3.0"
     },
     "autoload": {
         "psr-0": {
